welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:28: error: overriding method avance in class SimpleBuggle of type (x$1: Int)Unit;
 method avance needs `override' modifier
def avance(x:Int) {
    ^FlowerPot:33: error: overriding method recule in class SimpleBuggle of type (x$1: Int)Unit;
 method recule needs `override' modifier
def recule(x:Int) {
    ^